--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,8 @@ LinkingTo: Rcpp
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Encoding: UTF-8
-Suggests: tinytest
+Suggests: 
+    knitr,
+    rmarkdown,
+    tinytest
+VignetteBuilder: knitr
